fix overflow scrollbar

--- a/src/sass/scenes/_scenes.scss
+++ b/src/sass/scenes/_scenes.scss
@@ -10,7 +10,7 @@
 }
 
 .scene-content {
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .scene-copy {
